create function file for across sub averaging

--- a/across_subject_analyses/scripts/ghost_attack_allsubs.ipynb
+++ b/across_subject_analyses/scripts/ghost_attack_allsubs.ipynb
@@ -53,6 +53,12 @@
     "from neurodsp.plts.time_series import plot_time_series\n",
     "from neurodsp.spectral import compute_spectrum, rotate_powerlaw\n",
     "from neurodsp.plts.spectral import plot_power_spectra\n",
+    "\n",
+    "## import custom functions\n",
+    "import sys\n",
+    "sys.path.append('/home/brooke/pacman/preprocessing/scripts')\n",
+    "import preproc_functions\n",
+    "import average_tfr_functions\n",
     "\n"
    ]
   },
@@ -75,129 +81,11 @@
     "preproc_dir = '/home/brooke/pacman/preprocessing'\n",
     "tfr_dir = '/home/brooke/knight_server/remote/bstavel/pacman/preprocessing'\n",
     "\n",
-    "# load preproc functions\n",
-    "%run ../../preprocessing/scripts/preproc_functions.py\n",
-    "\n",
     "# subjects\n",
     "sub_list = ['BJH021', 'BJH025', 'BJH016', 'SLCH002', 'BJH026', 'BJH027', 'BJH029', 'BJH039', 'BJH041', 'LL10', 'LL12', 'LL13', 'LL14', 'LL17', 'LL19']\n",
     "\n",
     "# conditions\n",
     "conditions = ['TrialType <= 16']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "e2ff1bf5-8a3b-4b30-a712-179a7e743b5e",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-01-12T07:44:28.759232Z",
-     "iopub.status.busy": "2024-01-12T07:44:28.758239Z",
-     "iopub.status.idle": "2024-01-12T07:44:28.761117Z",
-     "shell.execute_reply": "2024-01-12T07:44:28.760469Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "def calculate_ghost_attack_average(sub_list, string_filters, roi):\n",
-    "    tfrs = []\n",
-    "    used_subs = []\n",
-    "    for subject in sub_list:\n",
-    "\n",
-    "        try:\n",
-    "            if os.path.exists(f\"{tfr_dir}/{subject}/ieeg/ghost_attack/{roi}-tfr.h5\"):\n",
-    "                # load data\n",
-    "                used_subs.append(subject)\n",
-    "                \n",
-    "                # load data\n",
-    "                tmp_TFR = mne.time_frequency.read_tfrs(f\"{tfr_dir}/{subject}/ieeg/ghost_attack/{roi}-tfr.h5\")\n",
-    "\n",
-    "                # zscore and log\n",
-    "                tmp_TFR = log_and_zscore_TFR(tmp_TFR[0], baseline = (-1,3), logflag=True)\n",
-    "\n",
-    "                tfr_cases = []\n",
-    "                for case in string_filters:            \n",
-    "                    # filter\n",
-    "                    tfr_case = tmp_TFR[case]\n",
-    "                    # append\n",
-    "                    tfr_cases.append(tfr_case.data.mean(axis = 0).mean(axis = 0))\n",
-    "\n",
-    "                # get mean and append\n",
-    "                tfrs.append(tfr_cases)\n",
-    "\n",
-    "        except Exception as e:\n",
-    "            print(f\"Failed to load {subject}\")\n",
-    "            print(e)\n",
-    "            used_subs.remove(subject)\n",
-    "            continue\n",
-    "\n",
-    "        print(f\"currently used subs: {used_subs}\")\n",
-    "\n",
-    "    # save progress cuz it is so long to load these dang things       \n",
-    "    with open(f'../ieeg/ghost_attack_average_{roi}.pkl', 'wb') as f:\n",
-    "        pickle.dump(tfrs, f)                \n",
-    "        \n",
-    "    # invert list so the outer list is the string filter\n",
-    "    tfrs_cases = [[tfrs[j][i] for j in range(len(tfrs))] for i in range(len(tfrs[0]))]\n",
-    "\n",
-    "    all_subs_averages = []\n",
-    "    for tfr_case in tfrs_cases:\n",
-    "\n",
-    "        if any(\"LL\" in subject for subject in used_subs):\n",
-    "\n",
-    "            # get indicies of high/low samp rate subs\n",
-    "            first_ll_sub = [subject for subject in used_subs if \"LL\" in subject][0]\n",
-    "            ll_begin = used_subs.index(first_ll_sub)\n",
-    "\n",
-    "            # high sampling rate\n",
-    "            washu_tfrs = np.asarray(tfr_case[0:ll_begin])\n",
-    "            washu_tfrs_mean = washu_tfrs.mean(axis = 0)\n",
-    "\n",
-    "            # Low sampling rate\n",
-    "            ll_tfrs = np.asarray(tfr_case[ll_begin:])\n",
-    "            ll_tfrs_mean = ll_tfrs.mean(axis = 0)\n",
-    "\n",
-    "            # combine\n",
-    "            all_subs_tfrs = np.stack((washu_tfrs_mean[:, ::2], ll_tfrs_mean[:, 0:2001]))\n",
-    "        \n",
-    "            # mean\n",
-    "            all_subs_average = all_subs_tfrs.mean(axis = 0)\n",
-    "            all_subs_averages.append(all_subs_average)\n",
-    "            \n",
-    "        else:\n",
-    "            \n",
-    "            # high sampling rate\n",
-    "            washu_tfrs = np.asarray(tfr_case)\n",
-    "            washu_tfrs_mean = washu_tfrs.mean(axis = 0)\n",
-    "\n",
-    "            # mean\n",
-    "            all_subs_average = washu_tfrs_mean\n",
-    "            all_subs_averages.append(all_subs_average)    \n",
-    "\n",
-    "    return all_subs_averages\n",
-    "\n",
-    "def plot_allsub_averages(array_average, title, fname):\n",
-    "    plt.rcParams['figure.figsize'] = [45, 35]\n",
-    "    plt.rcParams.update({'font.size': 60})\n",
-    "    matplotlib.rcParams['font.serif'] = 'Times New Roman'\n",
-    "    matplotlib.rcParams['font.family'] = 'serif'\n",
-    "\n",
-    "    freqs = np.logspace(start = np.log10(1), stop = np.log10(150), num = 80, base = 10, endpoint = True)\n",
-    "    yticks = np.linspace(np.min(freqs),np.max(freqs),len(freqs))\n",
-    "    yticks_labels = np.round(freqs, 1)\n",
-    "    \n",
-    "    # decimate y for viz\n",
-    "    yticks = yticks[::2]\n",
-    "    yticks_labels = yticks_labels[::2]\n",
-    "\n",
-    "    fig, ax = plt.subplots()\n",
-    "    i = ax.imshow(array_average, cmap = 'RdBu_r', interpolation=\"none\", origin=\"lower\", aspect = 'auto', extent=[-1, 3, freqs[0], freqs[-1]], vmin = -1, vmax = 1)\n",
-    "    i2 = plt.axvline(x=0, color='black', linestyle='--')\n",
-    "    ax.set_yticks(yticks[::2])\n",
-    "    ax.set_yticklabels(yticks_labels[::2])\n",
-    "    bar = plt.colorbar(i)\n",
-    "    ax.set_title(title, fontsize=65, fontweight = \"bold\", pad=40)\n",
-    "    fig.savefig(fname, dpi=400)"
    ]
   },
   {
@@ -307,53 +195,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tfrs = np.load('../ieeg/ghost_attack_average_hc.pkl', allow_pickle=True)\n",
-    "tfrs_cases = [[tfrs[j][i] for j in range(len(tfrs))] for i in range(len(tfrs[0]))]\n",
-    "used_subs = ['BJH021', 'BJH025', 'BJH016', 'SLCH002', 'BJH027', 'BJH029', 'BJH039', 'BJH041', 'LL12', 'LL13', 'LL14', 'LL17', 'LL19']\n",
-    "all_subs_averages = []\n",
-    "\n",
-    "for tfr_case in tfrs_cases:\n",
-    "\n",
-    "    if any(\"LL\" in subject for subject in sub_list):\n",
-    "\n",
-    "        # get indicies of high/low samp rate subs\n",
-    "        first_ll_sub = [subject for subject in used_subs if \"LL\" in subject][0]\n",
-    "        ll_begin = used_subs.index(first_ll_sub)\n",
-    "\n",
-    "        # high sampling rate\n",
-    "        washu_tfrs = np.asarray(tfr_case[0:ll_begin])\n",
-    "        washu_tfrs_mean = washu_tfrs.mean(axis = 0)\n",
-    "\n",
-    "        # Low sampling rate\n",
-    "        ll_tfrs = np.asarray(tfr_case[ll_begin:])\n",
-    "        ll_tfrs_mean = ll_tfrs.mean(axis = 0)\n",
-    "\n",
-    "        # combine\n",
-    "        all_subs_tfrs = np.stack((washu_tfrs_mean[:, ::2], ll_tfrs_mean[:, 0:2001]))\n",
-    "\n",
-    "        # mean\n",
-    "        all_subs_average = all_subs_tfrs.mean(axis = 0)\n",
-    "        all_subs_averages.append(all_subs_average)\n",
-    "        \n",
-    "    else:\n",
-    "        \n",
-    "        # high sampling rate\n",
-    "        washu_tfrs = np.asarray(tfr_case)\n",
-    "        washu_tfrs_mean = washu_tfrs.mean(axis = 0)\n",
-    "\n",
-    "        # mean\n",
-    "        all_subs_average = washu_tfrs_mean\n",
-    "        all_subs_averages.append(all_subs_average)  \n",
-    "\n",
-    "all_subs_average_hc_conflict = all_subs_averages[0]  "
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 7,
    "id": "2bead1ff-66a3-4500-8a20-cc85da0b1b27",
    "metadata": {
@@ -380,7 +221,7 @@
     }
    ],
    "source": [
-    "plot_allsub_averages(all_subs_average_hc_conflict, \"Average Hippocampal TFR During Ghost Attack\", 'average_hc_ghost_attack_all_subs.png')"
+    "plot_allsub_averages(all_subs_average_hc_conflict, \"Average Hippocampal TFR During Ghost Attack\", 'average_hc_ghost_attack_all_subs.png', -1, 3)"
    ]
   },
   {
@@ -516,7 +357,7 @@
     }
    ],
    "source": [
-    "plot_allsub_averages(all_subs_average_ofc_conflict, \"Average OFC TFR During Ghost Attack\", 'average_ofc_ghost_attack_all_subs.png')"
+    "plot_allsub_averages(all_subs_average_ofc_conflict, \"Average OFC TFR During Ghost Attack\", 'average_ofc_ghost_attack_all_subs.png', -1, 3)"
    ]
   },
   {
@@ -636,7 +477,7 @@
     }
    ],
    "source": [
-    "plot_allsub_averages(all_subs_average_cing_conflict, \"Average Ant. Cingulate TFR During Ghost Attack\", 'average_cing_ghost_attack_all_subs.png')"
+    "plot_allsub_averages(all_subs_average_cing_conflict, \"Average Ant. Cingulate TFR During Ghost Attack\", 'average_cing_ghost_attack_all_subs.png', -1, 3)"
    ]
   },
   {
@@ -772,7 +613,7 @@
     }
    ],
    "source": [
-    "plot_allsub_averages(all_subs_average_amyg_conflict, \"Average Amygdala TFR During Ghost Attack\", 'average_amyg_ghost_attack_all_subs.png')"
+    "plot_allsub_averages(all_subs_average_amyg_conflict, \"Average Amygdala TFR During Ghost Attack\", 'average_amyg_ghost_attack_all_subs.png', -1, 3)"
    ]
   },
   {
@@ -908,7 +749,7 @@
     }
    ],
    "source": [
-    "plot_allsub_averages(all_subs_average_dlpfc_conflict, \"Average dlPFC TFR During Ghost Attack\", 'average_dlpfc_ghost_attack_all_subs.png')"
+    "plot_allsub_averages(all_subs_average_dlpfc_conflict, \"Average dlPFC TFR During Ghost Attack\", 'average_dlpfc_ghost_attack_all_subs.png', -1, 3)"
    ]
   },
   {
@@ -1019,7 +860,7 @@
     }
    ],
    "source": [
-    "plot_allsub_averages(all_subs_average_insula_conflict, \"Average Insula TFR During Ghost Attack\", 'average_insula_ghost_attack_all_subs.png')"
+    "plot_allsub_averages(all_subs_average_insula_conflict, \"Average Insula TFR During Ghost Attack\", 'average_insula_ghost_attack_all_subs.png', -1, 3)"
    ]
   },
   {
@@ -1135,7 +976,7 @@
     }
    ],
    "source": [
-    "plot_allsub_averages(all_subs_average_ec_conflict, \"Average Entorhinal Cortex TFR During Ghost Attack\", 'average_ec_ghost_attack_all_subs.png')"
+    "plot_allsub_averages(all_subs_average_ec_conflict, \"Average Entorhinal Cortex TFR During Ghost Attack\", 'average_ec_ghost_attack_all_subs.png', -1, 3)"
    ]
   }
  ],
