granger analyses cleaned up

--- a/preprocessing/BJH046/scripts/BJH046_preprocessing.ipynb
+++ b/preprocessing/BJH046/scripts/BJH046_preprocessing.ipynb
@@ -1986,7 +1986,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ieeg_analysis2",
+   "display_name": "ieeg_analysis",
    "language": "python",
    "name": "python3"
   },
