--- a/raw_data/LL17/scripts/LL17_cleaning.ipynb
+++ b/raw_data/LL17/scripts/LL17_cleaning.ipynb
@@ -28,15 +28,12 @@
    },
    "outputs": [],
    "source": [
-    "import matplotlib\n",
-    "matplotlib.use(\"Qt5Agg\")\n",
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "from scipy import signal, stats\n",
-    "import mat73\n",
     "import re\n",
-    "from neurodsp.timefrequency import compute_wavelet_transform\n",
+    "from BCI2kReader import BCI2kReader as b2k\n",
     "import os\n",
     "import mne\n",
     "import IPython\n",
