--- a/connectivity/scripts/turnaround_coherence/concatenate_connectivity_results.ipynb
+++ b/connectivity/scripts/turnaround_coherence/concatenate_connectivity_results.ipynb
@@ -34,12 +34,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sub_list = ['BJH021', 'BJH025', 'BJH016', 'SLCH002', 'BJH026', 'BJH027', 'BJH029', 'BJH039', 'BJH041', 'LL10', 'LL12', 'LL13', 'LL14', 'LL17', 'LL19']\n"
+    "sub_list = ['BJH046', 'BJH050', 'BJH051', 'BJH017', 'SLCH018', 'BJH021', 'BJH025', 'BJH016', 'SLCH002', 'BJH026', 'BJH027', 'BJH029', 'BJH039', 'BJH041', 'LL10', 'LL12', 'LL13', 'LL14', 'LL17', 'LL19']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,8 +48,8 @@
     "    raw_data_dir = f\"/home/brooke/pacman/raw_data/{subject}\"\n",
     "    preproc_data_dir = f\"/home/brooke/pacman/preprocessing/{subject}/ieeg\"\n",
     "\n",
-    "    sub_times = np.load(f'/home/brooke/pacman/connectivity/ieeg/imcoh_ppc_pli/{subject}_times_noghost.npy')\n",
-    "    sub_channels = np.load(f'/home/brooke/pacman/connectivity/ieeg/imcoh_ppc_pli/{subject}_channel_names_noghost.npy')\n",
+    "    sub_times = np.load(f'/home/brooke/pacman/connectivity/ieeg/imcoh_ppc_pli/{subject}_times.npy')\n",
+    "    sub_channels = np.load(f'/home/brooke/pacman/connectivity/ieeg/imcoh_ppc_pli/{subject}_channel_names.npy')\n",
     "\n",
     "    with open('/home/brooke/pacman/preprocessing/scripts/roi.py') as file:\n",
     "        exec(file.read())\n",
@@ -118,10 +118,10 @@
     "            ec_indices.append(ix)    \n",
     "\n",
     "    ## Load true data ##\n",
-    "    imcoh = np.load(f'/home/brooke/pacman/connectivity/ieeg/imcoh_ppc_pli/{subject}_imcoh_noghost.npy')\n",
-    "    ppc = np.load(f'/home/brooke/pacman/connectivity/ieeg/imcoh_ppc_pli/{subject}_ppc_noghost.npy')\n",
-    "    pli = np.load(f'/home/brooke/pacman/connectivity/ieeg/imcoh_ppc_pli/{subject}_pli_noghost.npy')\n",
-    "    pairs = np.load(f'/home/brooke/pacman/connectivity/ieeg/imcoh_ppc_pli/{subject}_pairs_noghost.npy')\n",
+    "    imcoh = np.load(f'/home/brooke/pacman/connectivity/ieeg/imcoh_ppc_pli/{subject}_imcoh_true.npy')\n",
+    "    ppc = np.load(f'/home/brooke/pacman/connectivity/ieeg/imcoh_ppc_pli/{subject}_ppc_true.npy')\n",
+    "    pli = np.load(f'/home/brooke/pacman/connectivity/ieeg/imcoh_ppc_pli/{subject}_pli_true.npy')\n",
+    "    pairs = np.load(f'/home/brooke/pacman/connectivity/ieeg/imcoh_ppc_pli/{subject}_pairs_true.npy')\n",
     "\n",
     "    ## Load shuffled data ##\n",
     "    imcoh_permutations = np.load(f'/home/brooke/pacman/connectivity/ieeg/imcoh_ppc_pli/perms/{subject}_imcoh_perm.npy')\n",
@@ -243,7 +243,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'LL19'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "subject"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -280,58 +300,58 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>A1-A2_to_A10-A11</td>\n",
+       "      <td>AL1 -AL2_to_DL1-DL2</td>\n",
        "      <td>amyg</td>\n",
-       "      <td>insula</td>\n",
+       "      <td>ofc</td>\n",
        "      <td>-2.5</td>\n",
-       "      <td>0.102424</td>\n",
+       "      <td>0.070954</td>\n",
        "      <td>Imaginary Coherence</td>\n",
-       "      <td>0.021</td>\n",
-       "      <td>BJH021</td>\n",
+       "      <td>0.090</td>\n",
+       "      <td>BJH046</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>A1-A2_to_A10-A11</td>\n",
+       "      <td>AL1 -AL2_to_DL1-DL2</td>\n",
        "      <td>amyg</td>\n",
-       "      <td>insula</td>\n",
+       "      <td>ofc</td>\n",
        "      <td>-2.49</td>\n",
-       "      <td>0.098080</td>\n",
+       "      <td>0.070004</td>\n",
        "      <td>Imaginary Coherence</td>\n",
-       "      <td>0.024</td>\n",
-       "      <td>BJH021</td>\n",
+       "      <td>0.094</td>\n",
+       "      <td>BJH046</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>A1-A2_to_A10-A11</td>\n",
+       "      <td>AL1 -AL2_to_DL1-DL2</td>\n",
        "      <td>amyg</td>\n",
-       "      <td>insula</td>\n",
+       "      <td>ofc</td>\n",
        "      <td>-2.48</td>\n",
-       "      <td>0.093736</td>\n",
+       "      <td>0.068850</td>\n",
        "      <td>Imaginary Coherence</td>\n",
-       "      <td>0.026</td>\n",
-       "      <td>BJH021</td>\n",
+       "      <td>0.100</td>\n",
+       "      <td>BJH046</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>A1-A2_to_A10-A11</td>\n",
+       "      <td>AL1 -AL2_to_DL1-DL2</td>\n",
        "      <td>amyg</td>\n",
-       "      <td>insula</td>\n",
+       "      <td>ofc</td>\n",
        "      <td>-2.47</td>\n",
-       "      <td>0.089439</td>\n",
+       "      <td>0.067484</td>\n",
        "      <td>Imaginary Coherence</td>\n",
-       "      <td>0.036</td>\n",
-       "      <td>BJH021</td>\n",
+       "      <td>0.106</td>\n",
+       "      <td>BJH046</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>A1-A2_to_A10-A11</td>\n",
+       "      <td>AL1 -AL2_to_DL1-DL2</td>\n",
        "      <td>amyg</td>\n",
-       "      <td>insula</td>\n",
+       "      <td>ofc</td>\n",
        "      <td>-2.46</td>\n",
-       "      <td>0.085242</td>\n",
+       "      <td>0.065897</td>\n",
        "      <td>Imaginary Coherence</td>\n",
-       "      <td>0.043</td>\n",
-       "      <td>BJH021</td>\n",
+       "      <td>0.107</td>\n",
+       "      <td>BJH046</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -350,9 +370,9 @@
        "      <td>ofc</td>\n",
        "      <td>dlpfc</td>\n",
        "      <td>2.460938</td>\n",
-       "      <td>0.042749</td>\n",
+       "      <td>-0.017226</td>\n",
        "      <td>Phase Lag Index</td>\n",
-       "      <td>0.074</td>\n",
+       "      <td>0.796</td>\n",
        "      <td>LL19</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -361,9 +381,9 @@
        "      <td>ofc</td>\n",
        "      <td>dlpfc</td>\n",
        "      <td>2.470703</td>\n",
-       "      <td>0.036796</td>\n",
+       "      <td>-0.017392</td>\n",
        "      <td>Phase Lag Index</td>\n",
-       "      <td>0.096</td>\n",
+       "      <td>0.806</td>\n",
        "      <td>LL19</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -372,9 +392,9 @@
        "      <td>ofc</td>\n",
        "      <td>dlpfc</td>\n",
        "      <td>2.480469</td>\n",
-       "      <td>0.031891</td>\n",
+       "      <td>-0.017462</td>\n",
        "      <td>Phase Lag Index</td>\n",
-       "      <td>0.113</td>\n",
+       "      <td>0.804</td>\n",
        "      <td>LL19</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -383,9 +403,9 @@
        "      <td>ofc</td>\n",
        "      <td>dlpfc</td>\n",
        "      <td>2.490234</td>\n",
-       "      <td>0.028628</td>\n",
+       "      <td>-0.017396</td>\n",
        "      <td>Phase Lag Index</td>\n",
-       "      <td>0.133</td>\n",
+       "      <td>0.799</td>\n",
        "      <td>LL19</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -394,23 +414,23 @@
        "      <td>ofc</td>\n",
        "      <td>dlpfc</td>\n",
        "      <td>2.5</td>\n",
-       "      <td>0.026433</td>\n",
+       "      <td>-0.017258</td>\n",
        "      <td>Phase Lag Index</td>\n",
-       "      <td>0.140</td>\n",
+       "      <td>0.790</td>\n",
        "      <td>LL19</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>12754881 rows × 8 columns</p>\n",
+       "<p>17997345 rows × 8 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "                         pairs first_region second_region      time  \\\n",
-       "0             A1-A2_to_A10-A11         amyg        insula      -2.5   \n",
-       "1             A1-A2_to_A10-A11         amyg        insula     -2.49   \n",
-       "2             A1-A2_to_A10-A11         amyg        insula     -2.48   \n",
-       "3             A1-A2_to_A10-A11         amyg        insula     -2.47   \n",
-       "4             A1-A2_to_A10-A11         amyg        insula     -2.46   \n",
+       "0          AL1 -AL2_to_DL1-DL2         amyg           ofc      -2.5   \n",
+       "1          AL1 -AL2_to_DL1-DL2         amyg           ofc     -2.49   \n",
+       "2          AL1 -AL2_to_DL1-DL2         amyg           ofc     -2.48   \n",
+       "3          AL1 -AL2_to_DL1-DL2         amyg           ofc     -2.47   \n",
+       "4          AL1 -AL2_to_DL1-DL2         amyg           ofc     -2.46   \n",
        "...                        ...          ...           ...       ...   \n",
        "69250  ROF3-ROF4_to_ROF9-ROF10          ofc         dlpfc  2.460938   \n",
        "69251  ROF3-ROF4_to_ROF9-ROF10          ofc         dlpfc  2.470703   \n",
@@ -419,22 +439,22 @@
        "69254  ROF3-ROF4_to_ROF9-ROF10          ofc         dlpfc       2.5   \n",
        "\n",
        "       connectivity               metric  percent_sig subject  \n",
-       "0          0.102424  Imaginary Coherence        0.021  BJH021  \n",
-       "1          0.098080  Imaginary Coherence        0.024  BJH021  \n",
-       "2          0.093736  Imaginary Coherence        0.026  BJH021  \n",
-       "3          0.089439  Imaginary Coherence        0.036  BJH021  \n",
-       "4          0.085242  Imaginary Coherence        0.043  BJH021  \n",
+       "0          0.070954  Imaginary Coherence        0.090  BJH046  \n",
+       "1          0.070004  Imaginary Coherence        0.094  BJH046  \n",
+       "2          0.068850  Imaginary Coherence        0.100  BJH046  \n",
+       "3          0.067484  Imaginary Coherence        0.106  BJH046  \n",
+       "4          0.065897  Imaginary Coherence        0.107  BJH046  \n",
        "...             ...                  ...          ...     ...  \n",
-       "69250      0.042749      Phase Lag Index        0.074    LL19  \n",
-       "69251      0.036796      Phase Lag Index        0.096    LL19  \n",
-       "69252      0.031891      Phase Lag Index        0.113    LL19  \n",
-       "69253      0.028628      Phase Lag Index        0.133    LL19  \n",
-       "69254      0.026433      Phase Lag Index        0.140    LL19  \n",
+       "69250     -0.017226      Phase Lag Index        0.796    LL19  \n",
+       "69251     -0.017392      Phase Lag Index        0.806    LL19  \n",
+       "69252     -0.017462      Phase Lag Index        0.804    LL19  \n",
+       "69253     -0.017396      Phase Lag Index        0.799    LL19  \n",
+       "69254     -0.017258      Phase Lag Index        0.790    LL19  \n",
        "\n",
-       "[12754881 rows x 8 columns]"
+       "[17997345 rows x 8 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -445,11 +465,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pd.DataFrame.to_csv(final_df, '/home/brooke/pacman/connectivity/ieeg/imcoh_ppc_pli/combined_noghost_connectivity.csv', index = False)"
+    "pd.DataFrame.to_csv(final_df, '/home/brooke/pacman/connectivity/ieeg/imcoh_ppc_pli/combined_connectivity_newsubs.csv', index = False)"
    ]
   },
   {
@@ -462,7 +482,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ieeg_analysis2",
+   "display_name": "ieeg_analysis",
    "language": "python",
    "name": "python3"
   },
