--- a/raw_data/LL17/scripts/LL17_bci_to_fif.ipynb
+++ b/raw_data/LL17/scripts/LL17_bci_to_fif.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "30b1b892-6de7-490a-9015-15e96664db57",
    "metadata": {},
    "outputs": [],
@@ -24,13 +24,10 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "from scipy import signal, stats\n",
-    "import mat73\n",
     "import re\n",
-    "from neurodsp.timefrequency import compute_wavelet_transform\n",
     "from BCI2kReader import BCI2kReader as b2k\n",
     "import os\n",
     "import mne\n",
-    "from tabulate import tabulate\n",
     "import IPython\n",
     "import seaborn as sns"
    ]
@@ -341,9 +338,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:anaconda3-ieeg_analysis]",
+   "display_name": "ieeg_analysis",
    "language": "python",
-   "name": "conda-env-anaconda3-ieeg_analysis-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -355,7 +352,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
